// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the prior snapshot 1`] = `
<div>
  <div
    className=""
  >
    <header
      className="MuiPaper-root-179 MuiPaper-elevation4-185 MuiAppBar-root-171 MuiAppBar-positionFixed-172 MuiAppBar-colorPrimary-177 mui-fixed"
    >
      <div
        className="MuiToolbar-root-206 MuiToolbar-regular-208 MuiToolbar-gutters-207 APIComponent-nowrap-165"
      >
        <button
          aria-label="Menu"
          className="MuiButtonBase-root-216 MuiIconButton-root-210 MuiIconButton-colorInherit-211 APIComponent-menuButton-166"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-215"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-219"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-226"
          />
        </button>
        <h2
          className="MuiTypography-root-233 MuiTypography-title-239 MuiTypography-colorInherit-252 APIComponent-flex-164"
        >
          Tournaments
        </h2>
        <button
          className="MuiButtonBase-root-216 MuiIconButton-root-210 MuiIconButton-colorInherit-211"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-215"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-219"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-226"
          />
        </button>
        <div
          className=""
        >
          <button
            aria-haspopup="true"
            aria-owns={null}
            className="MuiButtonBase-root-216 MuiIconButton-root-210 MuiIconButton-colorInherit-211"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-215"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-219"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-226"
            />
          </button>
        </div>
      </div>
    </header>
    <div
      className="APIComponent-spacer-168"
    />
  </div>
  <button
    aria-label="New Tournament"
    className="MuiButtonBase-root-216 MuiButton-root-283 MuiButton-fab-298 MuiButton-contained-292 MuiButton-containedSecondary-294 MuiButton-raised-295 MuiButton-raisedSecondary-297 APIComponent-actionButton-159"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-284"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-219"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
    <span
      className="MuiTouchRipple-root-226"
    />
  </button>
  <div
    className="TournamentCards-root-307"
  >
    <div
      className="MuiPaper-root-179 MuiPaper-elevation1-182 MuiPaper-rounded-180 MuiCard-root-310 TournamentCards-card-308"
      id="not-found"
    >
      <div
        className="MuiCardHeader-root-311"
      >
        <div
          className="MuiCardHeader-content-314"
        >
          <span
            className="MuiTypography-root-233 MuiTypography-headline-238 MuiCardHeader-title-315"
          >
            No Tournaments Found
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`matches the prior snapshot 2`] = `
<div>
  <div
    className=""
  >
    <header
      className="MuiPaper-root-179 MuiPaper-elevation4-185 MuiAppBar-root-171 MuiAppBar-positionFixed-172 MuiAppBar-colorPrimary-177 mui-fixed"
    >
      <div
        className="MuiToolbar-root-206 MuiToolbar-regular-208 MuiToolbar-gutters-207 APIComponent-nowrap-165"
      >
        <button
          aria-label="Menu"
          className="MuiButtonBase-root-216 MuiIconButton-root-210 MuiIconButton-colorInherit-211 APIComponent-menuButton-166"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-215"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-219"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-226"
          />
        </button>
        <h2
          className="MuiTypography-root-233 MuiTypography-title-239 MuiTypography-colorInherit-252 APIComponent-flex-164"
        >
          Tournaments
        </h2>
        <button
          className="MuiButtonBase-root-216 MuiIconButton-root-210 MuiIconButton-colorInherit-211"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-215"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-219"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-226"
          />
        </button>
        <div
          className=""
        >
          <button
            aria-haspopup="true"
            aria-owns={null}
            className="MuiButtonBase-root-216 MuiIconButton-root-210 MuiIconButton-colorInherit-211"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-215"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-219"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-226"
            />
          </button>
        </div>
      </div>
    </header>
    <div
      className="APIComponent-spacer-168"
    />
  </div>
  <button
    aria-label="New Tournament"
    className="MuiButtonBase-root-216 MuiButton-root-283 MuiButton-fab-298 MuiButton-contained-292 MuiButton-containedSecondary-294 MuiButton-raised-295 MuiButton-raisedSecondary-297 APIComponent-actionButton-159"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-284"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-219"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
    <span
      className="MuiTouchRipple-root-226"
    />
  </button>
  <div
    className="TournamentCards-root-307"
  >
    <div
      className="MuiPaper-root-179 MuiPaper-elevation1-182 MuiPaper-rounded-180 MuiCard-root-310 TournamentCards-card-308"
      id="mock0"
    >
      <div
        className="MuiCardHeader-root-311"
      >
        <div
          className="MuiCardHeader-content-314"
        >
          <span
            className="MuiTypography-root-233 MuiTypography-headline-238 MuiCardHeader-title-315"
          >
            test0
          </span>
          <span
            className="MuiTypography-root-233 MuiTypography-body1-242 MuiTypography-colorTextSecondary-256 MuiCardHeader-subheader-316"
          >
            cat0
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-317"
      >
        <p
          className="MuiTypography-root-233 MuiTypography-body1-242"
        >
          4 Total Players
        </p>
        <p
          className="MuiTypography-root-233 MuiTypography-body1-242"
        >
          3 Active Players
        </p>
      </div>
      <div
        className="MuiCardActions-root-318"
      >
        <a
          className="MuiButtonBase-root-216 MuiButton-root-283 MuiButton-text-285 MuiButton-flat-288 MuiButton-sizeSmall-304 TournamentCards-right-309 MuiCardActions-action-319"
          href="/tournament/mock0"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-284"
          >
            Continue
          </span>
          <span
            className="MuiTouchRipple-root-226"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-179 MuiPaper-elevation1-182 MuiPaper-rounded-180 MuiCard-root-310 TournamentCards-card-308"
      id="mock1"
    >
      <div
        className="MuiCardHeader-root-311"
      >
        <div
          className="MuiCardHeader-content-314"
        >
          <span
            className="MuiTypography-root-233 MuiTypography-headline-238 MuiCardHeader-title-315"
          >
            test1
          </span>
          <span
            className="MuiTypography-root-233 MuiTypography-body1-242 MuiTypography-colorTextSecondary-256 MuiCardHeader-subheader-316"
          >
            cat1
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-317"
      >
        <p
          className="MuiTypography-root-233 MuiTypography-body1-242"
        >
          8 Total Players
        </p>
        <p
          className="MuiTypography-root-233 MuiTypography-body1-242"
        >
          6 Active Players
        </p>
      </div>
      <div
        className="MuiCardActions-root-318"
      >
        <a
          className="MuiButtonBase-root-216 MuiButton-root-283 MuiButton-text-285 MuiButton-flat-288 MuiButton-sizeSmall-304 TournamentCards-right-309 MuiCardActions-action-319"
          href="/tournament/mock1"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-284"
          >
            Details
          </span>
          <span
            className="MuiTouchRipple-root-226"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-179 MuiPaper-elevation1-182 MuiPaper-rounded-180 MuiCard-root-310 TournamentCards-card-308"
      id="mock2"
    >
      <div
        className="MuiCardHeader-root-311"
      >
        <div
          className="MuiCardHeader-content-314"
        >
          <span
            className="MuiTypography-root-233 MuiTypography-headline-238 MuiCardHeader-title-315"
          >
            test2
          </span>
          <span
            className="MuiTypography-root-233 MuiTypography-body1-242 MuiTypography-colorTextSecondary-256 MuiCardHeader-subheader-316"
          >
            cat0
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-317"
      >
        <p
          className="MuiTypography-root-233 MuiTypography-body1-242"
        >
          4 Total Players
        </p>
        <p
          className="MuiTypography-root-233 MuiTypography-body1-242"
        >
          4 Active Players
        </p>
      </div>
      <div
        className="MuiCardActions-root-318"
      >
        <a
          className="MuiButtonBase-root-216 MuiButton-root-283 MuiButton-text-285 MuiButton-flat-288 MuiButton-sizeSmall-304 TournamentCards-right-309 MuiCardActions-action-319"
          href="/tournament/mock2"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-284"
          >
            Continue
          </span>
          <span
            className="MuiTouchRipple-root-226"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
